[package]
name = "kadedb-services-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
# When enabled, build.rs will try to locate and link against the native C ABI.
# Default is enabled for repo builds.
default = ["link-native"]
link-native = []
